# Mnemosyne

./: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  docker-compose.yml  proxy_build_error.txt  test_results.json
brain/: Dockerfile  requirements.txt  server.py  titans.py
dashboard/: index.html
ebpf_probe/: Cargo.toml  Dockerfile  README_EBPF.md  build_error.txt
ebpf_probe/ebpf_program/: Cargo.toml
ebpf_probe/ebpf_program/src/: main.rs
ebpf_probe/user_loader/: Cargo.toml
ebpf_probe/user_loader/src/: main.rs
proxy/: Cargo.toml  Dockerfile
proxy/src/: main.rs
tests/: attack_sim.py
