[package]
name = "user_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
libc = "0.2"
